[tool.poetry]
name = "ying"
version = "0.2.3"
description = "My personal python library for some common usage."
authors = ["Ying Cai <i@caiying.me>"]
readme = "README.md"

[tool.poetry.scripts]
ying = "ying.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.extras]
cli = ["fire", "python-dotenv", "dynaconf"]
cloud_storage = [
    "google-cloud-storage",
    "google-cloud-monitoring",
    "boto3",
    "azure-storage-blob",
    "oss2",
    "minio",
]
all = [
    "fire",
    "python-dotenv",
    "dynaconf",
    "google-cloud-storage",
    "google-cloud-monitoring",
    "boto3",
    "azure-storage-blob",
    "oss2",
    "minio",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
